about me section수정

--- a/intro.html
+++ b/intro.html
@@ -106,6 +106,7 @@
               <li class="minimumBox"></li>
               <li class="maximumBox"></li>
             </ul>
+            <p>클릭해서 보기</p>
           </nav>
           <div class="abmMain">
             <div class="abmWrap elmntWrap">
@@ -152,6 +153,7 @@
                       <h3>Post Malone, Han Sohee</h3>
                     </div>
                     <p>포스트말론 노래를 너무 좋아한답니다 <br>한소희는 그냥 이뻐서 좋아해요 ^^</p>
+                    <p>밑에 플레이리스트 소개글에 포스트말론 노래 넣어놨어요! 한번씩 들어주세여 ㅎㅎ</p>
                   </div>
                 </article>
 
